--- a/CSS/common.css
+++ b/CSS/common.css
@@ -61,7 +61,7 @@ header p{
     width: 100%;
     height: 6vw;
     padding: 0;
-    background-color:black;;
+    background-color:black;
 }
 
 .page-header {
@@ -202,15 +202,20 @@ h2{
     font-family: cursive;
 }
 
-.profile-text {
+.profile-text{
     width:52vw;
     text-align: left;
     font-family:"ヒラギノ明朝 Pro";
     line-height:2.8vw;
     position: relative;
     left:24vw;
-    font-size:1vw;
-    
+    font-size:1vw; 
+}
+
+.other-text{
+	font-size: 1vw;
+    width: 52vw;
+    position: relative;
 }
 
 
@@ -239,7 +244,7 @@ h2{
     position: relative;
     margin-left:25%;
     font-family:"ヒラギノ明朝 Pro";
-     font-size: 1.5vw;
+    font-size: 1.5vw;
 }
 
 
@@ -364,7 +369,7 @@ h2{
 }
 
 
-/*ここからrow6の内容*/
+/*ここからrow5の内容*/
 .row5{
     height: 50vw;
     width: 100%;
@@ -373,6 +378,12 @@ h2{
 #formWrap {
 	width:100%;
 	color:#555e;
+}
+
+.row5-title{
+    text-align: center;
+    font-size: 6vw;
+    color: black;
 }
     
 table.formTable{
@@ -450,6 +461,7 @@ tr{
 .row6{
     height:15vw;
     background-color: black;
+    text-align: center;
 }
 
 footer p{
