--- a/CSS/media.css
+++ b/CSS/media.css
@@ -56,7 +56,7 @@
     }
 	
 	.row3{
-		height:130vw;
+		height:170vw;
 	}
     
     .row3-title{
@@ -67,19 +67,19 @@
     
     .face-icon{
         width:30vw;
-        height: 30.2vw
+        height: 30.2vw;
     }
     
     span{
-        font-size:8vw
+        font-size:8vw;
     }
 	
-	.face-text p{
+	.face-text{
 		font-size:4vw;
 	}
     
     .profile-text{
-        font-size:2vw;
+        font-size:1vw;
         width: 90%;
         line-height:5vw;
         position: relative;
@@ -89,6 +89,10 @@
     .profile{
         font-size:6vw;
     }
+	
+	.other-text{
+		font-size:1vw;
+	}
 	
     .row4{
         height: 190vw;
@@ -222,6 +226,7 @@
     
     footer p{
         font-size: 8vw;
+        text-align: center;
     }
 }
 
