--- a/CSS/media.css
+++ b/CSS/media.css
@@ -56,7 +56,7 @@
     }
 	
 	.row3{
-		height:190vw;
+		height:180vw;
 	}
     
     .row3-title{
@@ -91,15 +91,18 @@
     }
 	
     .other{
-        font-size: 6vw;
+        font-size:6vw;
     }
     
 	.other-text{
 		font-size:2vw;
+        width: 70vw;
+        position: relative;
+        right: 10vw;
 	}
 	
     .row4{
-        height: 180vw;
+        height:180vw;
     }
     
     .row4-title{
