--- a/CSS/media.css
+++ b/CSS/media.css
@@ -109,6 +109,7 @@
         position: relative;
         font-family:cursive;
         top: 20vw;
+        font-size:6vw;
     }
     
     .img-contena{
