--- a/CSS/common.css
+++ b/CSS/common.css
@@ -29,6 +29,27 @@ h2{
 }
 
 
+.fade_off {
+
+    opacity: 0;
+
+    -webkit-transition: all 1s;
+
+    -moz-transition: all 1s;
+
+    -o-transition: all 1s;
+
+    -ms-transition: all 1s;
+
+    transition: all 1s;
+}
+
+.fade_on {
+    opacity: 1;
+}
+
+
+
 /*ここからrow1の内容*/
 
 .row1{
