--- a/CSS/common.css
+++ b/CSS/common.css
@@ -390,7 +390,7 @@ h2{
     margin-top: -10vw;
 }
 
-.skils{
+.skills{
     width: 100%;
     display: block;
     position: relative;
@@ -398,12 +398,20 @@ h2{
     background-color: darkgray;
 }
 
-.skils img{
+.skills img{
     height:50vw;
-    width: 50vw;
+    width: 53vw;
     display: block;
     margin: 0 auto;
-    margin-top:10vw;
+    margin-top:1vw;
+}
+
+.skills h2{
+    text-align: center;
+    font-size:3vw;
+    position: relative;
+    top: 3vw;
+    
 }
 /*row4の内容終わり*/
 
