--- a/CSS/media.css
+++ b/CSS/media.css
@@ -99,9 +99,9 @@
 	}
     
     .profile-text{
-        font-size:2.5vw;
+        font-size:2.8vw;
         width: 90%;
-        line-height:5vw;
+        line-height:5vw
         position: relative;
         left: 7vw;
     }
@@ -115,7 +115,7 @@
     }
     
 	.other-text{
-		font-size:2.3vw;
+		font-size:2.8vw;
         width: 70vw;
         position: relative;
         right: 10vw;
