--- a/CSS/media.css
+++ b/CSS/media.css
@@ -101,7 +101,7 @@
     .profile-text{
         font-size:3vw;
         width: 90%;
-        line-height:5vw
+        line-height:5vw;
         position: relative;
         left: 7vw;
     }
